RESOLVED FIXED279507
[GStreamer][WebRTC] Crash when rtpbin is missing
https://bugs.webkit.org/show_bug.cgi?id=279507
Summary [GStreamer][WebRTC] Crash when rtpbin is missing
Carlos Bentzen
Reported 2024-09-11 04:24:29 PDT
It is possible to have an incomplete GStreamer installation that has webrtcbin but not rtpbin. In those cases we should fail gracefully but currently we crash. Backtrace (sorry it's from a Release build): #0 0x00007ffff6d521a1 in WebCore::gstObjectHasProperty(_GstElement*, char const*) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #1 0x00007ffff5d3a783 in WebCore::GStreamerMediaEndpoint::initializePipeline() () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007ffff5d3a4b6 in WebCore::GStreamerMediaEndpoint::GStreamerMediaEndpoint(WebCore::GStreamerPeerConnectionBackend&) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #3 0x00007ffff5d44004 in WebCore::GStreamerPeerConnectionBackend::GStreamerPeerConnectionBackend(WebCore::RTCPeerConnection&) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #4 0x00007ffff5d43f87 in WebCore::createGStreamerPeerConnectionBackend(WebCore::RTCPeerConnection&) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #5 0x00007ffff5d171e6 in WebCore::RTCPeerConnection::RTCPeerConnection(WebCore::Document&) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #6 0x00007ffff5d16b31 in WebCore::RTCPeerConnection::create(WebCore::Document&, WebCore::RTCConfiguration&&) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #7 0x00007ffff5831ccf in WebCore::JSDOMConstructor<WebCore::JSRTCPeerConnection>::construct(JSC::JSGlobalObject*, JSC::CallFrame*) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 Patching coming up soon.
Attachments
Carlos Bentzen
Comment 1 2024-09-11 04:30:49 PDT
EWS
Comment 2 2024-09-11 10:56:46 PDT
Committed 283495@main (0b20935dbde7): <https://commits.webkit.org/283495@main> Reviewed commits have been landed. Closing PR #33460 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-11 10:57:17 PDT
Note You need to log in before you can comment on or make changes to this bug.