[GStreamer][WebRTC] Crash when rtpbin is missing https://bugs.webkit.org/show_bug.cgi?id=279507

Reviewed by Philippe Normand.

Add early return and error log when rtpbin is not found in webrtcbin.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::initializePipeline):

Canonical link: https://commits.webkit.org/283495@main